--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,54 @@
 
-# fixes wrong theme colors (magic - do not remove)
+# fixes wrong theme colors (magic - DO NOT REMOVE)
 set -g default-terminal 'screen-256color'
 set-option -ga terminal-overrides ',*256col*:Tc'
+
+# remap leader key from 'C-b' to 'C-space'
+unbind C-b
+set -g prefix C-space
+bind-key C-space send-prefix
+
+# split panes using | and -
+bind \ split-window -hb
+bind - split-window -vb
+unbind '"'
+unbind %
+
+# resize panes using al t
+bind-key M-j resize-pane -D
+bind-key M-k resize-pane -U
+bind-key M-h resize-pane -L
+bind-key M-l resize-pane -R
+
+# close pane with control+x
+bind-key -n C-x kill-pane
+
+# enable mouse mode (tmux 2.1 and above)
+set -g mouse on
+
+# displays "prefix" (in red) in status line when prefix is pressed
+set -g status-left "#[bg=brightBlue]#{s/root//:client_key_table}"
+
+
+# vim-tmux-navigator
+
+# Smart pane switching with awareness of Vim splits.
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
+
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+
+
 
